--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,5 @@
   "start_url": "/sudoku-elm/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#fff"
+  "theme_color": "#EDF2F7"
 }
