--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npx parcel watch index.html",
-    "start": "npx parcel index.html",
-    "build": "npx parcel build index.html -d docs"
+    "watch": "npx parcel watch src/index.html",
+    "start": "npx parcel src/index.html",
+    "build": "npx parcel build src/index.html -d ./"
   },
   "keywords": [
     "sudoku",
