--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "npx parcel watch src/index.html",
     "start": "npx parcel src/index.html",
-    "build": "npx parcel build src/index.html -d ./"
+    "build": "npx parcel build src/index.html -d ./ --public-url ./sudoku-elm/"
   },
   "keywords": [
     "sudoku",
